<resources>
    <string name="app_name">Chat App</string>
    <string name="nombre_desarrollador">Jose Galvez</string>

    <string name="Btn_ir_registros">Registrarse</string>
    <string name="Btn_ir_logeo">Ingresar</string>

    <string name="R_Et_nombre_usuario">Nombre de usuario</string>
    <string name="R_Et_email">Correo electrónico</string>
    <string name="R_Et_password">Contraseña</string>
    <string name="R_Et_r_password">Repite la contraseña</string>
    <string name="Btn_registrar">Registrar</string>

    <string name="menu_perfil">Perfil de Usuario</string>
    <string name="menu_acerca_de">Acerca de</string>
    <string name="menu_salir">Cerrar sesión</string>

    <string name="L_Et_email">Correo electrónico</string>
    <string name="L_Et_password">Contraseña</string>
    <string name="Btn_login">Ingresar</string>

    <string name="Nombre_usuario">Nombre de Usuario</string>

    <string name="Item_nombre_usuario">Nombre de usuario</string>
    <string name="Item_email_usuario">Email del usuario</string>

    <string name="Et_buscar_usuario">Buscar usuario</string>

    <!--Perfil de Usuario -->
    <string name="P_n_usuario">Nombre de Usuario</string>
    <string name="P_email">Email</string>
    <string name="P_nombres">Nombre</string>
    <string name="P_apellidos">Apellidos</string>
    <string name="P_profesion">Profesión</string>
    <string name="P_domicilio">Domicilio</string>
    <string name="P_edad">Edad</string>
    <string name="P__telefono">Teléfono</string>
    <string name="Btn_Guardar">Guardar</string>

    <!-- Editar imagen perfil-->
    <string name="BtnElegirImagenDe">Elegir Imagen de Perfil</string>
    <string name="BtnActualizarImagen">Actualizar Imagen</string>

    <!-- Cuadro de dialogo seleccionar imagen de -->
    <string name="Txt_seleccionar_imagen">Selecciona imagen de: </string>
    <string name="Btn_abrir_galeria">Galería</string>
    <string name="Btn_abrir_camara">Cámara</string>

</resources>